VA-1711 Fix z-index of modal overlay

--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -260,7 +260,7 @@
     left: 0;
     padding: 0;
     border: 1px solid #888;
-    z-index: 1;
+    z-index: 3; // z-index of ::before of .h5p-multi-media-choice-wrong/correct is 2
     overflow: hidden;
     width: 100%;
     height: 100%;
